Se protege cambio en estado de cuenta

--- a/src/app/components/estadocuenta/estadocuenta.component.html
+++ b/src/app/components/estadocuenta/estadocuenta.component.html
@@ -233,7 +233,7 @@
             <div class="container">
               <div class="row">
 
-                <div *ngIf="!bCliente" class="col-12 col-lg-2">
+                <div *ngIf="bCliente"  class="col-12 col-lg-2">
                   <table class="table table-sm  table-responsive">
                     <thead>
                       <tr>
@@ -253,7 +253,7 @@
                 </div>
 
 
-                <div *ngIf="!bCliente"  class="col-12 col-lg-2">
+                <div *ngIf="bCliente"  class="col-12 col-lg-2">
                   <table class="table table-sm  ">
                     <thead>
                       <tr>
