Se protege resolucion de issuse en reportes.

--- a/src/app/components/consultaprecios/consultaprecios.component.html
+++ b/src/app/components/consultaprecios/consultaprecios.component.html
@@ -187,8 +187,8 @@
             <td class="FilasFonelli" >{{comp.ComponenteLinea}}</td>                
             <td class="FilasFonelli" >{{ comp.ComponenteCodigo}}</td>
             <td class="FilasFonelli" >{{ comp.ComponenteDescripc}}</td>
-            <td class="FilasFonelli" style="text-align:right">{{ formatoNunmero(comp.PiezasNormal)}}</td>
-            <td class="FilasFonelli" style="text-align:right">{{ formatoNunmero(comp.GramosEquivalente)}}</td>            
+            <td class="FilasFonelli" style="text-align:right">{{ formatoNumero(comp.PiezasNormal)}}</td>
+            <td class="FilasFonelli" style="text-align:right">{{ formatoNumero(comp.GramosEquivalente)}}</td>            
           </tr>
         </tbody>          
       </table>
